feat(config): 新增空配置及配置加载保存逻辑优化